<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/bkgnClr">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tempLogo"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/temp_logo2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_game_button"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/game_menu_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_settings_button"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/edit_settings_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_nodes_button"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/reset_nodes_button"/>
</LinearLayout>