<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bopit_general_gameplay_layout"
    android:background="#FFFFFF">
    <android.support.v7.widget.Toolbar
        android:id="@+id/playgame_bopit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bopIt"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <!-- Other rounds display -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bopit_other_rounds_layout_general"
        android:layout_margin="20dp"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_score"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#e05a11"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#e05a11"
                android:text="@string/no_selections_yet"
                android:id="@+id/bopit_my_score_other_general"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/current_players_turn"
                android:textSize="35sp"
                android:textColor="#e05a11"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="#80210e"
                android:id="@+id/bopit_this_players_turn_general"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- Begin round -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:id="@+id/bopit_start_round_layout_general"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_turn_alert"
                android:textSize="30sp"
                android:textColor="#e05a11"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_turn_instructions"
                android:textSize="20sp"
                android:textColor="#80210e"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="30dp"
                android:text="@string/bopit_start_round_button_text"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:id="@+id/bopit_start_round_button_general"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- Play round -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/bopit_play_round_layout_general"
        android:layout_margin="20dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bopit_score"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/bopit_score_text_general"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_selections_yet"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:id="@+id/bopit_score_value_general"
            android:layout_below="@id/bopit_score_text_general"
            android:layout_alignEnd="@id/bopit_score_text_general"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_remaining"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/bopit_time_remaining_text_general"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secs"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_below="@id/bopit_time_remaining_text_general"
            android:layout_alignParentEnd="true"
            android:id="@+id/bopit_mins_general"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/no_selections_yet"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_below="@id/bopit_time_remaining_text_general"
            android:layout_toStartOf="@id/bopit_mins_general"
            android:id="@+id/bopit_time_remaining_value_general"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="70sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:id="@+id/bopit_next_action_text_general"
            android:text="@string/no_action_yet"/>
    </RelativeLayout>

    <!-- Winning player display -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bopit_winning_player_layout_general"
        android:layout_margin="20dp"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_score"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#e05a11"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#e05a11"
                android:id="@+id/bopit_my_score_winner_general"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/winning_user"
                android:textSize="30sp"
                android:textColor="#80210e"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="#e05a11"
                android:id="@+id/bopit_winning_username_general"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/winning_score"
                android:textSize="30sp"
                android:textColor="#80210e"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="#e05a11"
                android:id="@+id/bopit_winning_score_general"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/end_game_button_text"
                android:id="@+id/bopit_end_game_button_general"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>