<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkgnClr"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_game"
        android:textColor="#FFFFFF"
        android:id="@+id/select_game_menu_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bkgnClr" >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:weightSum="1"
                android:id="@+id/game_menu_for_buttons">

            </LinearLayout>

        </ScrollView>
        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bkgnClr"
                    android:orientation="vertical"
                    android:id="@+id/game_menu_for_desc">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/game_menu_desc_header"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/game_desc_text"
                        android:textColor="#FFFFFF"
                        android:id="@+id/game_menu_desc_text"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/game_desc_play_button"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/play_button_text"
                        android:visibility="invisible"/>
                </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>